Don't mix BUS_DMASYNC_PREREAD and BUS_DMASYNC_POSTWRITE. Suggested by <bouyer>, fixes PR kern/42662